--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
 h1{
     color: blueviolet;
     font-size: 30px;
-    
+    text-align: center;
+
+}
+p{
+    color: chartreuse;
+    font-size: 20px;
+    text-align: center;
 }
